Before removing old codes

--- a/tf_robot_learning/notebooks/motion_planning_sampling/panda.ipynb
+++ b/tf_robot_learning/notebooks/motion_planning_sampling/panda.ipynb
@@ -15,6 +15,9 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('lib')\n",
+    "\n",
     "import scipy\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
@@ -39,6 +42,8 @@
     "import tf_robot_learning as rl\n",
     "import tf_robot_learning.distributions as ds\n",
     "from tf_robot_learning import kinematic as tk\n",
+    "\n",
+    "DATA_PATH = '/home/teguh/git/publications/learning_distribution_gan/tf_robot_learning/data'\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -96,8 +101,7 @@
    ],
    "source": [
     "#define the robot as a kinematic chain, loaded from urdf\n",
-    "urdf = tk.urdf_from_file(rl.datapath +\n",
-    "                         '/urdf/panda_arm.urdf');\n",
+    "urdf = tk.urdf_from_file(DATA_PATH + '/urdf/panda_arm.urdf');\n",
     "chain = tk.kdl_chain_from_urdf_model(\n",
     "    urdf, tip='panda_hand'\n",
     ")"
@@ -785,25 +789,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shelf_urdf = rl.datapath + '/urdf/bookshelf_simple_collision.urdf'\n",
-    "shelf_id = p.loadURDF(fileName=shelf_urdf)\n",
-    "p.resetBasePositionAndOrientation(shelf_id, (-0.6,0.6,-0.5), (0, 0, 0, 1.))\n",
-    "\n",
-    "#for visualizing the desired target\n",
-    "_,_,ball_id = create_primitives(radius=0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "robot_urdf = rl.datapath + '/urdf/panda_arm.urdf'\n",
+    "robot_urdf = DATA_PATH + '/urdf/panda_arm.urdf'\n",
     "robot_id = p.loadURDF(fileName=robot_urdf)\n",
     "dof = p.getNumJoints(robot_id)\n",
     "pb_joint_indices = np.arange(7)\n",
@@ -817,7 +807,14 @@
     "p.resetBasePositionAndOrientation(table_square_id, (0.,0,-0.64), (0, 0, 0.7071068, 0.7071068))\n",
     "\n",
     "table_id = p.loadURDF('table/table.urdf')\n",
-    "p.resetBasePositionAndOrientation(table_id, (.7,0,-0.5), (0, 0, 0.7071068, 0.7071068))"
+    "p.resetBasePositionAndOrientation(table_id, (.7,0,-0.5), (0, 0, 0.7071068, 0.7071068))\n",
+    "\n",
+    "shelf_urdf = DATA_PATH + '/urdf/bookshelf_simple_collision.urdf'\n",
+    "shelf_id = p.loadURDF(fileName=shelf_urdf)\n",
+    "p.resetBasePositionAndOrientation(shelf_id, (-0.6,0.6,-0.5), (0, 0, 0, 1.))\n",
+    "\n",
+    "#for visualizing the desired target\n",
+    "_,_,ball_id = create_primitives(radius=0.05)"
    ]
   },
   {
@@ -833,7 +830,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "robot_urdf = rl.datapath + '/urdf/panda_arm.urdf';\n",
+    "robot_urdf = DATA_PATH + '/urdf/panda_arm.urdf';\n",
     "rmodel = pin.buildModelFromUrdf(robot_urdf)\n",
     "rdata = rmodel.createData()\n",
     "\n",
