--- a/tf_robot_learning/notebooks/motion_planning_sampling/talos_footfixed.ipynb
+++ b/tf_robot_learning/notebooks/motion_planning_sampling/talos_footfixed.ipynb
@@ -9,15 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('lib')\n",
+    "\n",
     "import tensorflow as tf\n",
     "import tensorflow.compat.v1 as tf1\n",
     "import numpy as np\n",
@@ -31,6 +29,9 @@
     "from tf_robot_learning import kinematic as tk\n",
     "\n",
     "from IPython.core import display\n",
+    "\n",
+    "DATA_PATH = '/home/teguh/git/publications/learning_distribution_gan/tf_robot_learning/data'\n",
+    "\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -77,7 +78,7 @@
     }
    ],
    "source": [
-    "urdf = tk.urdf_from_file(rl.datapath + '/urdf/talos_reduced.urdf');\n",
+    "urdf = tk.urdf_from_file(DATA_PATH + '/urdf/talos_reduced.urdf');\n",
     "display.clear_output()\n",
     "\n",
     "#list of end-effector\n",
@@ -929,7 +930,7 @@
    "outputs": [],
    "source": [
     "#load robot\n",
-    "robot_urdf = rl.datapath + '/urdf/talos_reduced.urdf';\n",
+    "robot_urdf = DATA_PATH + '/urdf/talos_reduced.urdf';\n",
     "robot_id = p.loadURDF(fileName=robot_urdf)\n",
     "dof = p.getNumJoints(robot_id)\n",
     "\n",
@@ -1043,7 +1044,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "robot_urdf = rl.datapath + '/urdf/talos_reduced.urdf';\n",
+    "robot_urdf = DATA_PATH + '/urdf/talos_reduced.urdf';\n",
     "rmodel = pin.buildModelFromUrdf(robot_urdf , pin.JointModelFreeFlyer())\n",
     "rdata = rmodel.createData()\n",
     "\n",
