--- a/tf_robot_learning/notebooks/motion_planning_sampling/2drobot.ipynb
+++ b/tf_robot_learning/notebooks/motion_planning_sampling/2drobot.ipynb
@@ -18,6 +18,9 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('lib')\n",
+    "\n",
     "import tensorflow as tf\n",
     "import tensorflow.compat.v1 as tf1\n",
     "import numpy as np\n",
@@ -762,21 +765,21 @@
   "anaconda-cloud": {},
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "PyCharm (optimal_control)",
    "language": "python",
-   "name": "python2"
+   "name": "pycharm-688c58dd"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
