--- a/tf_robot_learning/notebooks/motion_planning_sampling/talos_footmoved.ipynb
+++ b/tf_robot_learning/notebooks/motion_planning_sampling/talos_footmoved.ipynb
@@ -18,6 +18,9 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('lib')\n",
+    "\n",
     "import tensorflow as tf\n",
     "import tensorflow.compat.v1 as tf1\n",
     "import numpy as np\n",
@@ -31,6 +34,9 @@
     "from tf_robot_learning import kinematic as tk\n",
     "\n",
     "from IPython.core import display\n",
+    "\n",
+    "DATA_PATH = '/home/teguh/git/publications/learning_distribution_gan/tf_robot_learning/data'\n",
+    "\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -77,7 +83,7 @@
     }
    ],
    "source": [
-    "urdf = tk.urdf_from_file(rl.datapath + '/urdf/talos_reduced.urdf');\n",
+    "urdf = tk.urdf_from_file(DATA_PATH + '/urdf/talos_reduced.urdf');\n",
     "display.clear_output()\n",
     "\n",
     "#list of end-effector\n",
@@ -914,7 +920,7 @@
    "outputs": [],
    "source": [
     "#load robot\n",
-    "robot_urdf = rl.datapath + '/urdf/talos_reduced.urdf';\n",
+    "robot_urdf = DATA_PATH + '/urdf/talos_reduced.urdf';\n",
     "robot_id = p.loadURDF(fileName=robot_urdf)\n",
     "dof = p.getNumJoints(robot_id)\n",
     "\n",
@@ -976,7 +982,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "robot_urdf = rl.datapath + '/urdf/talos_reduced.urdf';\n",
+    "robot_urdf = DATA_PATH + '/urdf/talos_reduced.urdf';\n",
     "rmodel = pin.buildModelFromUrdf(robot_urdf , pin.JointModelFreeFlyer())\n",
     "rdata = rmodel.createData()\n",
     "\n",
