--- a/tf_robot_learning/notebooks/motion_planning_sampling/panda.ipynb
+++ b/tf_robot_learning/notebooks/motion_planning_sampling/panda.ipynb
@@ -32,8 +32,9 @@
     "\n",
     "import pinocchio as pin\n",
     "from utils import *\n",
-    "from costs import *\n",
+    "#from costs import *\n",
     "from robot import *\n",
+    "from costs_pseudo import *\n",
     "from functools import partial\n",
     "\n",
     "import tensorflow as tf\n",
@@ -83,19 +84,19 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Material has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: material"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "WARNING:tensorflow:From /home/teguh/miniconda3/envs/tf3/lib/python3.8/site-packages/tensorflow/python/ops/linalg/linear_operator_full_matrix.py:142: calling LinearOperator.__init__ (from tensorflow.python.ops.linalg.linear_operator) with graph_parents is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Do not pass `graph_parents`.  They will  no longer be used.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Material has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: materialMaterial has neither a color nor textureUnknown tag: material"
      ]
     }
    ],
@@ -116,25 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = np.load('data/panda_constrained_orientation.npy')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = np.load('data/panda_constrained_orientation.npy')\n",
+    "\n",
     "data = data[:25000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,19 +520,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step 9990\t, Loss gen: 122.411461\t, loss discr 93.164299, loss target 92.852104\n",
-      "321.1899609565735\n"
-     ]
-    }
-   ],
    "source": [
     "_batch_size = 100\n",
     "alpha = 0.5\n",
@@ -591,11 +574,8 @@
    "metadata": {},
    "source": [
     "saver = tf1.train.Saver()\n",
-    "\n",
     "# save_path = saver.save(sess, \"data/panda_gan_target_constrained3_without_data.ckpt\")\n",
-    "\n",
-    "save_path = saver.save(sess, \"data/panda_gan_target_constrained_fewdata.ckpt\")\n",
-    "\n"
+    "save_path = saver.save(sess, \"data/panda_gan_target_constrained_fewdata.ckpt\")"
    ]
   },
   {
@@ -607,12 +587,22 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from data/panda_gan_target_constrained.ckpt\n"
+     ]
+    }
+   ],
    "source": [
     "saver = tf1.train.Saver()\n",
     "saver.restore(sess, \"data/panda_gan_target_constrained.ckpt\")\n",
-    "#saver.restore(sess, \"data/panda_gan_target_constrained_fewdata.ckpt\")\n"
+    "#saver.restore(sess, \"data/panda_gan_target_constrained_fewdata.ckpt\")"
    ]
   },
   {
@@ -720,6 +710,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save figure"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
@@ -760,20 +757,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "physics_client_id = p.connect(p.DIRECT)\n",
     "p.setPhysicsEngineParameter(enableFileCaching=0)\n",
     "p.setAdditionalSearchPath(pybullet_data.getDataPath())\n",
-    "\n",
     "p.configureDebugVisualizer(p.COV_ENABLE_GUI,0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,44 +869,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CostProjector():\n",
-    "    def __init__(self, cost):\n",
-    "        self.cost = cost\n",
-    "    \n",
-    "    def __call__(self, xk):\n",
-    "        if False not in self.cost.feasibles:    \n",
-    "            #print('Stop at iteration!' + str(self.cost.nfev))\n",
-    "            raise Exception\n",
-    "        \n",
-    "    def project(self, q, ftol = 1e-12, gtol = 1e-12, disp = 0, maxiter = 1000 ):\n",
-    "        #update the variables\n",
-    "        self.cost.reset_iter()\n",
-    "        \n",
-    "        if 'posture' in self.cost.costnames:\n",
-    "            #regularizing around the initial q\n",
-    "            self.cost.costs['posture'].cost.desired_posture = q.copy()\n",
-    "        \n",
-    "        if 'ori_cost' in self.cost.costnames:\n",
-    "            #maintain the current EE pose while correcting its orientation\n",
-    "            pos, ori = computePose_std(q)\n",
-    "            self.cost.costs['ori_cost'].cost.desired_pose[:3] = pos\n",
-    "\n",
-    "        status = False\n",
-    "        try:\n",
-    "            res = minimize(self.cost.calc,q,method='l-bfgs-b', jac=self.cost.calcDiff, callback=self.__call__, options={'ftol':ftol, 'gtol':gtol, 'disp':disp, 'maxiter':maxiter})      \n",
-    "        except:\n",
-    "            #Optimization manage to get solution\n",
-    "            status = True\n",
-    "        res = {'stat':status, 'q':  self.cost.qs[-1], 'qs': self.cost.qs, 'nfev': self.cost.nfev, 'feval': self.cost.feval}\n",
-    "        return res"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
@@ -927,66 +885,11 @@
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x = np.array([0.,0.,0.])\n",
-    "#rpy = np.array([0.,np.pi/2,0.])\n",
-    "rpy = np.array([0.,0.,0.])\n",
-    "sel_vec_x = np.array([1,1,1])\n",
-    "sel_vec_rpy = np.array([0,1,1])\n",
-    "\n",
-    "pose = np.concatenate((x,rpy))\n",
-    "sv = np.concatenate((sel_vec_x,sel_vec_rpy))\n",
-    "\n",
-    "#define orientation cost\n",
-    "ori_cost = CostFrameRPY(rmodel, rdata, pose, ee_frame_id, sv)\n",
-    "#define joint limit cost\n",
-    "bound_cost = CostBound(joint_limits)\n",
-    "posture_cost = CostPosture(rmodel, rdata, np.random.rand(rmodel.nq))\n",
-    "\n",
-    "#define Projector\n",
-    "cost_sum = CostSum()\n",
-    "cost_sum.addCost(ori_cost, 10., 'ori_cost', 1e-3)\n",
-    "cost_sum.addCost(bound_cost, 10., 'joint_limit', 1e-5)\n",
-    "cost_sum.addCost(posture_cost, 1e-3, 'posture', 1e3)\n",
-    "projector_constraint = CostProjector(cost_sum)\n",
-    "\n",
-    "#Define IK solver\n",
-    "pose_cost = CostFrameRPY(rmodel, rdata, pose, ee_frame_id, np.array([1,1,1,0,1,0]))\n",
-    "cost_sum_ik = CostSum()\n",
-    "cost_sum_ik.addCost(pose_cost, 50., 'pose_cost', 5e-3)\n",
-    "cost_sum_ik.addCost(bound_cost, 100., 'joint_limit', 1e-5)\n",
-    "#cost_sum_ik.addCost(posture_cost, 5e-2, 'posture', 1e3)\n",
-    "projector_pose = CostProjector(cost_sum_ik)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "joint_limits_old = joint_limits.copy()\n",
-    "\n",
-    "joint_limits = np.array([[-3.]*7, [3.]*7])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Use new cost function"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from costs_pseudo import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
