Starting large change

--- a/tf_robot_learning/notebooks/motion_planning_sampling/walker.ipynb
+++ b/tf_robot_learning/notebooks/motion_planning_sampling/walker.ipynb
@@ -791,23 +791,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "error",
-     "evalue": "Not connected to physics server.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-eaece9c1b3ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrh_box_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_primitives\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGEOM_BOX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhalfExtents\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.05\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.05\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.05\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/git/publications/learning_distribution_gan/tf_robot_learning/notebooks/motion_planning_sampling/lib/utils.py\u001b[0m in \u001b[0;36mcreate_primitives\u001b[0;34m(shapeType, rgbaColor, pos, radius, length, halfExtents, baseMass, basePosition)\u001b[0m\n\u001b[1;32m    212\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    213\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcreate_primitives\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshapeType\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrgbaColor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mradius\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlength\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhalfExtents\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbaseMass\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbasePosition\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 214\u001b[0;31m     \u001b[0mvisualShapeId\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreateVisualShape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshapeType\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshapeType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrgbaColor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrgbaColor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvisualFramePosition\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mradius\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mradius\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlength\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlength\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhalfExtents\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhalfExtents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    215\u001b[0m     \u001b[0mcollisionShapeId\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreateCollisionShape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshapeType\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshapeType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcollisionFramePosition\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mradius\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mradius\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlength\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhalfExtents\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhalfExtents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    216\u001b[0m     bodyId = p.createMultiBody(baseMass=baseMass,\n",
-      "\u001b[0;31merror\u001b[0m: Not connected to physics server."
-     ]
-    }
-   ],
    "source": [
     "_,_,rh_box_id = create_primitives(p.GEOM_BOX, halfExtents=[0.05, 0.05, 0.05])"
    ]
@@ -965,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,8 +989,86 @@
     "dof = p.getNumJoints(robot_id)\n",
     "\n",
     "#load plane\n",
-    "plane_id = p.loadURDF('plane.urdf')\n",
+    "# plane_id = p.loadURDF('plane.urdf')\n",
     "# p.resetBasePositionAndOrientation(plane_id, (0,0,0), np.array([0,0,0,1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shelf_urdf = '/home/teguh/git/publications/learning_distribution_gan/tf_robot_learning/data/urdf/shelf.urdf'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shelf_id = p.loadURDF(shelf_urdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.resetBasePositionAndOrientation(shelf_id,(2,0,-0.3), (np.sin(np.pi/4),0,0, np.cos(np.pi/4)) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.resetBasePositionAndOrientation(robot_id, (0,0,1), ((0,0,np.sin(np.pi/2), np.cos(np.pi/2))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.getNumJoints(shelf_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "GetJointInfo failed.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-f308510db0d2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetJointInfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshelf_id\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31merror\u001b[0m: GetJointInfo failed."
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    print(p.getJointInfo(shelf_id,i)[1])"
    ]
   },
   {
