--- a/tf_robot_learning/notebooks/motion_planning_sampling/panda_ik.ipynb
+++ b/tf_robot_learning/notebooks/motion_planning_sampling/panda_ik.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Panda Example"
+    "## Projection and Inverse Kinematics"
    ]
   },
   {
@@ -28,25 +28,25 @@
     "\n",
     "import pybullet as p\n",
     "import pybullet_data\n",
-    "\n",
     "import pinocchio as pin\n",
-    "from utils import *\n",
-    "from costs_pseudo import *\n",
+    "\n",
+    "from pb_utils.kine import get_joint_limits, check_joint_limits\n",
+    "from pb_utils.visualize import set_q, vis_traj, create_primitives\n",
+    "from pin_utils.pin_utils import computeJacobian, computePose\n",
+    "\n",
+    "from residuals import ResidualFrameTranslationFloatingBase, ResidualFrameRotationSE3FloatingBase, ResidualBound, \\\n",
+    "                        ResidualPosture, ResidualSum, ResidualStructure, CostProjector, clip_bounds\n",
+    "from motion_planning import sampler\n",
+    "from panda_config import pb_joint_indices\n",
     "from functools import partial\n",
     "\n",
-    "DATA_PATH = '/home/teguh/git/rli/learning_distribution_gan/tf_robot_learning/data'\n",
+    "DATA_PATH = '../../data'\n",
+    "robot_urdf = DATA_PATH + '/urdf/panda_arm.urdf'\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "np.set_printoptions(precision=4, suppress=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 2: Projection and Inverse Kinematics"
    ]
   },
   {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,30 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "robot_urdf = DATA_PATH + '/urdf/panda_arm.urdf'\n",
     "robot_id = p.loadURDF(fileName=robot_urdf)\n",
     "dof = p.getNumJoints(robot_id)\n",
-    "pb_joint_indices = np.arange(7)\n",
     "joint_limits = get_joint_limits(robot_id,pb_joint_indices)\n",
     "mean_pose = 0.5*(joint_limits[0]+joint_limits[1])\n",
     "\n",
     "plane_id = p.loadURDF('plane.urdf')\n",
     "p.resetBasePositionAndOrientation(plane_id, (0,0,0.), (0,0,0,1))\n",
-    "# p.resetBasePositionAndOrientation(plane_id, (0,0,-.5), (0,0,0,1))\n",
-    "\n",
-    "# table_square_id = p.loadURDF('table_square/table_square.urdf')\n",
-    "# p.resetBasePositionAndOrientation(table_square_id, (0.,0,-0.64), (0, 0, 0.7071068, 0.7071068))\n",
-    "\n",
-    "# table_id = p.loadURDF('table/table.urdf')\n",
-    "# p.resetBasePositionAndOrientation(table_id, (.7,0,-0.5), (0, 0, 0.7071068, 0.7071068))\n",
-    "\n",
-    "# shelf_urdf = DATA_PATH + '/urdf/bookshelf_simple_collision.urdf'\n",
-    "# shelf_id = p.loadURDF(fileName=shelf_urdf)\n",
-    "# p.resetBasePositionAndOrientation(shelf_id, (-0.6,0.6,-0.5), (0, 0, 0, 1.))\n",
     "\n",
     "#for visualizing the desired target\n",
     "_,_,ball_id = create_primitives(radius=0.05)"
@@ -124,11 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "robot_urdf = DATA_PATH + '/urdf/panda_arm.urdf';\n",
     "rmodel = pin.buildModelFromUrdf(robot_urdf)\n",
     "rdata = rmodel.createData()\n",
     "\n",
@@ -145,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,63 +156,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "rotation_ik = np.eye(3)\n",
-    "pose_cost = CostFrameTranslationFloatingBaseNew(rmodel, rdata, np.zeros(3), ee_frame_id, weight=np.array([1.,1.,1.]))\n",
-    "ori_cost = CostFrameRotationSE3FloatingBaseNew(rmodel, rdata, rotation_ik, ee_frame_id, weight=np.array([1.,1.,0.]))\n",
-    "bound_cost = CostBoundNew(joint_limits, 1e-4)\n",
-    "posture_cost = CostPostureNew(rmodel, rdata, mean_pose)"
+    "pose_cost = ResidualFrameTranslationFloatingBase(rmodel, rdata, np.zeros(3), ee_frame_id, weight=np.array([1.,1.,1.]))\n",
+    "ori_cost = ResidualFrameRotationSE3FloatingBase(rmodel, rdata, rotation_ik, ee_frame_id, weight=np.array([1.,1.,0.]))\n",
+    "bound_cost = ResidualBound(joint_limits, 1e-4)\n",
+    "posture_cost = ResidualPosture(rmodel, rdata, mean_pose)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#for projection\n",
-    "cost_sum = CostSumNew(rmodel, rdata)\n",
+    "cost_sum = ResidualSum(rmodel, rdata)\n",
     "cost_sum.addCost(ori_cost, 20., 'ori_cost', 1e-4)\n",
     "cost_sum.addCost(bound_cost, 20., 'joint_limit', 1e-3)\n",
     "\n",
     "#for IK with horizontal gripper constraint\n",
-    "cost_sum_ik = CostSumNew(rmodel, rdata)\n",
+    "cost_sum_ik = ResidualSum(rmodel, rdata)\n",
     "cost_sum_ik.addCost(pose_cost,50., 'pose_cost', 1e-3)\n",
-    "cost_sum_ik.addCost(ori_cost, 30., 'ori_cost', 1e-3)\n",
+    "# cost_sum_ik.addCost(ori_cost, 30., 'ori_cost', 1e-3)\n",
     "cost_sum_ik.addCost(bound_cost, 30., 'joint_limit', 1e-3)\n",
     "# cost_sum_ik.addCost(posture_cost, .001 , 'posture', 1e3)\n",
     "\n",
-    "robot_projector = TalosCostProjectorNew(cost_sum, rmodel, rdata, bounds = joint_limits)\n",
-    "robot_ik_solver = TalosCostProjectorNew(cost_sum_ik, rmodel, rdata, bounds = joint_limits)"
+    "robot_projector = CostProjector(cost_sum, rmodel, rdata, bounds = joint_limits)\n",
+    "robot_ik_solver = CostProjector(cost_sum_ik, rmodel, rdata, bounds = joint_limits)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class sampler():\n",
-    "    \"\"\"\n",
-    "    General sampler, given the joint limits\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, joint_limits=None):\n",
-    "        self.dof = joint_limits.shape[1]\n",
-    "        self.joint_limits = joint_limits\n",
-    "\n",
-    "    def sample(self, N=1):\n",
-    "        samples = np.random.rand(N, self.dof)\n",
-    "        samples = self.joint_limits[0] + samples * (self.joint_limits[1] - self.joint_limits[0])\n",
-    "        return samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,14 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.6077234534738006e-09\n"
+      "2.336274441181375e-15\n"
      ]
     }
    ],
@@ -273,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,34 +258,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "331.95701434602574\n",
-      "False 100\n",
-      "14.193044287616594\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "idx = np.random.randint(1000)\n",
     "goal_pos = goal_poses[idx]\n",
     "    \n",
     "p.resetBasePositionAndOrientation(ball_id, goal_pos, np.array([0,0,0,1]))\n",
     "\n",
-    "robot_ik_solver.cost.costs['pose_cost'].cost.desired_pose = goal_pos\n",
-    "q = rob_simple_sampler.sample().flatten()\n",
-    "set_q_std(q)\n",
-    "print(robot_ik_solver.cost.calc_cost(q))\n",
-    "res = robot_ik_solver.project(q, maxiter = 100)\n",
+    "robot_ik_solver.cost.costs['pose_cost'].cost.desired_pose = goal_pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "495.39405280327725\n",
+      "True 5\n",
+      "3.266729186871891e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "q0 = rob_simple_sampler.sample().flatten()\n",
+    "set_q_std(q0)\n",
+    "\n",
+    "robot_ik_solver.update_pinocchio(q0)\n",
+    "print(robot_ik_solver.cost.calc_cost(q0))\n",
+    "res = robot_ik_solver.project(q0, maxiter = 300)\n",
     "print(res['stat'], res['nfev'])\n",
     "set_q_std(res['q'])\n",
     "\n",
-    "print(robot_ik_solver.cost.calc_cost(q))"
+    "print(robot_ik_solver.cost.calc_cost(res['q']))"
    ]
   }
  ],
@@ -340,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
