Setting up the walker rrt

--- a/tf_robot_learning/notebooks/motion_planning_sampling/panda_ik.ipynb
+++ b/tf_robot_learning/notebooks/motion_planning_sampling/panda_ik.ipynb
@@ -131,13 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "computeJacobian_std = partial(computeJacobian, rmodel, rdata, ee_frame_id)\n",
     "computePose_std = partial(computePose, rmodel, rdata, ee_frame_id)\n",
-    "set_q_std = partial(set_q,robot_id, pb_joint_indices)"
+    "set_q_std = partial(set_q,robot_id = robot_id, joint_indices=pb_joint_indices)"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rotation_ik = np.eye(3)\n",
+    "rotation_ik = np.eye(3) #desired orientation matrix\n",
     "pose_cost = ResidualFrameTranslationFloatingBase(rmodel, rdata, np.zeros(3), ee_frame_id, weight=np.array([1.,1.,1.]))\n",
     "ori_cost = ResidualFrameRotationSE3FloatingBase(rmodel, rdata, rotation_ik, ee_frame_id, weight=np.array([1.,1.,0.]))\n",
     "bound_cost = ResidualBound(joint_limits, 1e-4)\n",
@@ -181,12 +181,19 @@
     "#for IK with horizontal gripper constraint\n",
     "cost_sum_ik = ResidualSum(rmodel, rdata)\n",
     "cost_sum_ik.addCost(pose_cost,50., 'pose_cost', 1e-3)\n",
-    "# cost_sum_ik.addCost(ori_cost, 30., 'ori_cost', 1e-3)\n",
+    "cost_sum_ik.addCost(ori_cost, 30., 'ori_cost', 1e-3)\n",
     "cost_sum_ik.addCost(bound_cost, 30., 'joint_limit', 1e-3)\n",
     "# cost_sum_ik.addCost(posture_cost, .001 , 'posture', 1e3)\n",
     "\n",
     "robot_projector = CostProjector(cost_sum, rmodel, rdata, bounds = joint_limits)\n",
     "robot_ik_solver = CostProjector(cost_sum_ik, rmodel, rdata, bounds = joint_limits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define the sampler"
    ]
   },
   {
@@ -197,7 +204,10 @@
    "source": [
     "workspace_area = np.array([[-0.6, -0.6 , -0.1], [0.6, 0.6, 1.0]])\n",
     "target_sampler = sampler(workspace_area)\n",
-    "rob_simple_sampler = sampler(joint_limits)"
+    "joint_limits_margin = np.copy(joint_limits)\n",
+    "joint_limits_margin[:,0] -= 0.2\n",
+    "joint_limits_margin[:,1] += 0.2\n",
+    "rob_simple_sampler = sampler(joint_limits_margin)"
    ]
   },
   {
@@ -209,14 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.336274441181375e-15\n"
+      "1.597409283487189e-11\n"
      ]
     }
    ],
@@ -238,11 +248,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ik_workspace_area = np.array([[0.4, -0.5 , 0.5], [0.7, 0.5, .8]])\n",
+    "ik_workspace_area = np.array([[0.4, -0.4 , 0.5], [0.5, 0.5, .8]])\n",
     "ik_target_sampler = sampler(ik_workspace_area)\n",
     "goal_poses = ik_target_sampler.sample(1000)\n",
     "for i in range(len(goal_poses)):\n",
@@ -258,44 +268,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = np.random.randint(1000)\n",
-    "goal_pos = goal_poses[idx]\n",
-    "    \n",
-    "p.resetBasePositionAndOrientation(ball_id, goal_pos, np.array([0,0,0,1]))\n",
-    "\n",
-    "robot_ik_solver.cost.costs['pose_cost'].cost.desired_pose = goal_pos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "495.39405280327725\n",
-      "True 5\n",
-      "3.266729186871891e-07\n"
+      "1902.0936511826253\n",
+      "Status: True , Number of function calls:  14\n",
+      "Cost:  2.1882732400119846e-07\n",
+      "\n",
+      " CHECKING\n",
+      "Residual names:\n",
+      "pose_cost,ori_cost,joint_limit,\n",
+      "\n",
+      "Residual values:\n",
+      "[-0. -0. -0.],[ 0.  0. -0.],[0. 0. 0. 0. 0. 0. 0.],\n",
+      "\n",
+      "Jacobian SVD:\n",
+      "[52.3832 43.1388 31.5384 27.6716 11.2849  8.5156 -0.    ]\n",
+      "\n",
+      "Next direction:\n",
+      "[ 0. -0. -0. -0.  0. -0.  0.]\n"
      ]
     }
    ],
    "source": [
+    "idx = np.random.randint(1000)\n",
+    "goal_pos = goal_poses[idx]\n",
+    "    \n",
+    "p.resetBasePositionAndOrientation(ball_id, goal_pos, np.array([0,0,0,1]))\n",
+    "\n",
+    "robot_ik_solver.cost.costs['pose_cost'].cost.desired_pose = goal_pos\n",
+    "\n",
     "q0 = rob_simple_sampler.sample().flatten()\n",
     "set_q_std(q0)\n",
     "\n",
+    "\n",
     "robot_ik_solver.update_pinocchio(q0)\n",
+    "\n",
     "print(robot_ik_solver.cost.calc_cost(q0))\n",
     "res = robot_ik_solver.project(q0, maxiter = 300)\n",
-    "print(res['stat'], res['nfev'])\n",
+    "print('Status:', res['stat'], ', Number of function calls: ', res['nfev'])\n",
     "set_q_std(res['q'])\n",
+    "print('Cost: ', robot_ik_solver.cost.calc_cost(res['q']))\n",
     "\n",
-    "print(robot_ik_solver.cost.calc_cost(res['q']))"
+    "robot_ik_solver.check_config(res['q'])"
    ]
   }
  ],
