--- a/tf_robot_learning/notebooks/motion_planning_sampling/walker.ipynb
+++ b/tf_robot_learning/notebooks/motion_planning_sampling/walker.ipynb
@@ -9,9 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tf_robot_learning'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-73acb8e80d4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mv1\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtf_robot_learning\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mrl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtf_robot_learning\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistributions\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtf_robot_learning\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mkinematic\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tf_robot_learning'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('lib')\n",
@@ -24,10 +36,7 @@
     "\n",
     "import pybullet as p\n",
     "import pybullet_data\n",
-    "from utils import *\n",
     "from scipy.optimize import fmin_bfgs\n",
-    "from costs_pseudo import *\n",
-    "from robot import *\n",
     "from functools import partial\n",
     "\n",
     "import tensorflow as tf\n",
@@ -36,6 +45,13 @@
     "import tf_robot_learning.distributions as ds\n",
     "from tf_robot_learning import kinematic as tk\n",
     "\n",
+    "from pb_utils.kine import get_joint_limits, check_joint_limits\n",
+    "from pb_utils.visualize import set_q, vis_traj, create_primitives\n",
+    "from pin_utils.pin_utils import computeJacobian, computePose\n",
+    "\n",
+    "from residuals import ResidualFrameTranslationFloatingBase, ResidualFrameRotationSE3FloatingBase, ResidualBound, \\\n",
+    "                        ResidualPosture, ResidualSum, ResidualStructure, CostProjector, clip_bounds\n",
+    "from motion_planning import sampler\n",
     "\n",
     "DATA_PATH = '/home/teguh/git/publications/learning_distribution_gan/tf_robot_learning/data'\n",
     "\n",
