Cleaning up devel

--- a/tf_robot_learning/notebooks/motion_planning_sampling/old_codes/talos_footfixed_new.ipynb
+++ b/tf_robot_learning/notebooks/motion_planning_sampling/old_codes/talos_footfixed_new.ipynb
@@ -1724,7 +1724,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## c-RRT with Talos"
+    "git@github.com:teguhSL/learning_distribution_gan.git## c-RRT with Talos"
    ]
   },
   {
