--- a/tf_robot_learning/notebooks/motion_planning_sampling/walker_rrt.ipynb
+++ b/tf_robot_learning/notebooks/motion_planning_sampling/walker_rrt.ipynb
@@ -1,34 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Discussion with Zhipeng\n",
-    "- urdf model\n",
-    "- the env setup\n",
-    "- the gripper configuration\n",
-    "- \n",
-    "150kg\n",
-    "\n",
-    "66mm, 116\n",
-    "52.5mm, 136\n",
-    "\n",
-    "just the upper body first\n",
-    "get default configuration for the leg"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "#### Size:\n",
-    "Height: 1.5\n",
-    "Root std: 1.14\n",
-    "COM: 0.644 "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -456,16 +428,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ignore_indices=[0,1,2,3,4,5,6,    7, 8, 9, 10, 11,12,   13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]"
+    "ignore_indices=[0,1,2,3,4,5,6,    7, 8, 9, 10, 11,12,   13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]\n",
+    "#indices to be ignored, only sample from the rest of the indices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -505,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
@@ -714,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
